// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Страница с подробностями о товаре показывает информацию о товаре: ProductDetails без корзины 1`] = `
<div>
  <div
    class="ProductDetails row"
  >
    <div
      class="col-12 col-sm-5 col-lg-4"
    >
      <img
        class="Image"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkMAYAADkANVKH3ScAAAAASUVORK5CYII="
      />
    </div>
    <div
      class="col-12 col-sm-7 col-lg-6"
    >
      <h1
        class="ProductDetails-Name"
      >
        bipki
      </h1>
      <p
        class="ProductDetails-Description"
      >
        lorem
      </p>
      <p
        class="ProductDetails-Price fs-3"
      >
        $
        420
      </p>
      <p>
        <button
          class="ProductDetails-AddToCart btn btn-primary btn-lg"
        >
          Add to Cart
        </button>
      </p>
      <dl>
        <dt>
          Color
        </dt>
        <dd
          class="ProductDetails-Color text-capitalize"
        >
          doret
        </dd>
        <dt>
          Material
        </dt>
        <dd
          class="ProductDetails-Material text-capitalize"
        >
          ipsum
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`Страница с подробностями о товаре при добавлении в корзину отображает соответствующий индикатор: ProductDetails с корзиной 1`] = `
<div>
  <div
    class="ProductDetails row"
  >
    <div
      class="col-12 col-sm-5 col-lg-4"
    >
      <img
        class="Image"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkMAYAADkANVKH3ScAAAAASUVORK5CYII="
      />
    </div>
    <div
      class="col-12 col-sm-7 col-lg-6"
    >
      <h1
        class="ProductDetails-Name"
      >
        bipki
      </h1>
      <p
        class="ProductDetails-Description"
      >
        lorem
      </p>
      <p
        class="ProductDetails-Price fs-3"
      >
        $
        420
      </p>
      <p>
        <button
          class="ProductDetails-AddToCart btn btn-primary btn-lg"
        >
          Add to Cart
        </button>
        <span
          class="CartBadge text-success mx-3"
        >
          Item in cart
        </span>
      </p>
      <dl>
        <dt>
          Color
        </dt>
        <dd
          class="ProductDetails-Color text-capitalize"
        >
          doret
        </dd>
        <dt>
          Material
        </dt>
        <dd
          class="ProductDetails-Material text-capitalize"
        >
          ipsum
        </dd>
      </dl>
    </div>
  </div>
</div>
`;
